[package]
name = "colledor-back"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix-cors = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.25.0"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
md5 = "0.7.0"
rand = "0.8.5"
reqwest = {version = "0.11.10", features = ["json"]}
tokio = {version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"]}
futures = "0.3.21"
anyhow = "1.0.56"
postgres = "0.19.2"

[[bin]]
name = "server"
path = "src/main.rs"